--- a/Circuit.html
+++ b/Circuit.html
@@ -37,22 +37,22 @@
 		<meta property="og:url"           content="https://stewdio.github.io/q.js/Circuit.html">
 		
 		<link rel="canonical" href="https://stewdio.github.io/q.js/Circuit.html">
+		<link href="other/q-favicon-064.png" rel="icon" type="image/png">
+		<link href="other/q-favicon-144.png" rel="apple-touch-icon">
 		
-		<script src="https://www.googletagmanager.com/gtag/js" async></script>
-		<link  href="other/q-favicon-064.png" rel="icon" type="image/png">
-		<link  href="other/q-favicon-144.png" rel="apple-touch-icon">
-		<script src="other/ga.js"></script>
-		<link  href="other/style.css" rel="stylesheet" type="text/css">
-		
-		<script src="source/Q.js"></script>
-		<script src="source/Q.ComplexNumber.js"></script>
-		<script src="source/Q.Matrix.js"></script>
-		<script src="source/Q.Qubit.js"></script>
-		<script src="source/Q.Gate.js"></script>
-		<script src="source/Q.Circuit.js"></script>
-		<script src="source/Q.Circuit.Editor.js"></script>
-		<link  href="source/Q.Circuit.Editor.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" type="text/css" href="source/Q.css">
+		<link rel="stylesheet" type="text/css" href="source/Q-Circuit-Editor.css">
+		<link rel="stylesheet" type="text/css" href="other/documentation.css">
 
+		<script src="https://www.googletagmanager.com/gtag/js" async></script>
+		<script src="other/ga.js"></script>				
+		<script src="source/Q.js"></script>
+		<script src="source/Q-ComplexNumber.js"></script>
+		<script src="source/Q-Matrix.js"></script>
+		<script src="source/Q-Qubit.js"></script>
+		<script src="source/Q-Gate.js"></script>
+		<script src="source/Q-Circuit.js"></script>
+		<script src="source/Q-Circuit-Editor.js"></script>
 		<script src="other/navigation.js"></script>
 		
 	</head>
@@ -459,12 +459,12 @@ r2  |0⟩───○──┤ X#1 ├┤ X │
 				returns a document fragment, complete with event handlers,
 				that can be attached to your live document.
 			</p>
-			<p class="coming-soon">
+			<div class="coming-soon">
 				Note that this feature is still in its early stages
 				and is not yet fully functional.
-				Check back in March 2020 for updates.
+				Check back in May 2020 for updates.
 				Better yet, <a href="https://github.com/stewdio/q.js" target="_blank">contribute to Q!</a>
-			</p>
+			</div>
 <pre><code>
 document.body.appendChild( fox.<a href="#.prototype.toDom">toDom</a>() )
 </code></pre>
@@ -667,7 +667,7 @@ r5  |0⟩───○──┤ X ├────○────┤ M │
 
 			<p class="coming-soon">
 				More to come! More examples! Revised examples! 
-				Check back in March 2020.
+				Check back in May 2020.
 			</p>
 			<hr>
 			<h3>Constructor</h3>
