Fixed links to source code.

--- a/Circuit.html
+++ b/Circuit.html
@@ -951,7 +951,7 @@ r5  |0⟩───○──┤ X ├────○────┤ M │
 			<footer>
 				<p>
 					Source:
-					<a href="https://github.com/stewdio/q.js/blob/master/source/Q.Circuit.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q.Circuit.js</a>
+					<a href="https://github.com/stewdio/q.js/blob/master/source/Q-Circuit.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q-Circuit.js</a>
 				</p>
 			</footer>
 		</main>
