--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -1086,7 +1086,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 			<footer>
 				<p>
 					Source:
-					<a href="https://github.com/stewdio/q.js/blob/master/source/Q.ComplexNumber.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q.ComplexNumber.js</a>
+					<a href="https://github.com/stewdio/q.js/blob/master/source/Q-ComplexNumber.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q-ComplexNumber.js</a>
 				</p>
 			</footer>
 		</main>
