--- a/Gate.html
+++ b/Gate.html
@@ -568,7 +568,7 @@ new <a href="Q.html">Q</a>.Gate({
 			<footer>
 				<p>
 					Source:
-					<a href="https://github.com/stewdio/q.js/blob/master/source/Q.Gate.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q.Gate.js</a>
+					<a href="https://github.com/stewdio/q.js/blob/master/source/Q-Gate.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q-Gate.js</a>
 				</p>
 			</footer>
 		</main>
