--- a/Matrix.html
+++ b/Matrix.html
@@ -1120,7 +1120,7 @@ new <a href="Q.html">Q</a>.Matrix(
 			<footer>
 				<p>
 					Source:
-					<a href="https://github.com/stewdio/q.js/blob/master/source/Q.Matrix.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q.Matrix.js</a>
+					<a href="https://github.com/stewdio/q.js/blob/master/source/Q-Matrix.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q-Matrix.js</a>
 				</p>
 			</footer>
 		</main>
