--- a/Qubit.html
+++ b/Qubit.html
@@ -1004,7 +1004,7 @@ var fox = new <a href="Q.html">Q</a>.Qubit( 1, 0 )
 			<footer>
 				<p>
 					Source:
-					<a href="https://github.com/stewdio/q.js/blob/master/source/Q.Qubit.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q.Qubit.js</a>
+					<a href="https://github.com/stewdio/q.js/blob/master/source/Q-Qubit.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q-Qubit.js</a>
 				</p>
 			</footer>
 		</main>
