More minor CSS fixes.

--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -57,7 +57,12 @@
 		
 	</head>
 	<body>
-		<main>
+		<main class="api">
+			<p>
+				<a href="https://github.com/stewdio/q.js/blob/master/source/Q-ComplexNumber.js?ts=4" target="_blank">
+					<code>Q-ComplexNumber.js</code>
+				</a>
+			</p>
 			<h3 id="Real_numbers">Real numbers ℝ</h3>
 			<p>
 				Our regular, ordinary, everyday numbers are called
@@ -1082,13 +1087,6 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					</dd>
 				</li>
 			</ul>
-			<hr>
-			<footer>
-				<p>
-					Source:
-					<a href="https://github.com/stewdio/q.js/blob/master/source/Q-ComplexNumber.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q-ComplexNumber.js</a>
-				</p>
-			</footer>
 		</main>
 		<script>
 
