--- a/Q.html
+++ b/Q.html
@@ -57,7 +57,12 @@
 		
 	</head>
 	<body>
-		<main>
+		<main class="api">
+			<p>
+				<a href="https://github.com/stewdio/q.js/blob/master/source/Q.js?ts=4" target="_blank">
+					<code>Q.js</code>
+				</a>
+			</p>
 			<h3>The Q object</h3>
 			<p>
 				The root of Q.js is the <code>Q</code> object.
@@ -332,13 +337,6 @@ a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a ).<a href="Co
 					</dd>
 				</li>
 			</ul>
-			<hr>
-			<footer>
-				<p>
-					Source:
-					<a href="https://github.com/stewdio/q.js/blob/master/source/Q.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q.js</a>
-				</p>
-			</footer>
 		</main>
 		<script>
 
