--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 					Stay tuned.
 				</span>
 			</p>
+			<br>
 			<div class="qjs-circuit-palette"></div>
 			<div id="example-dom"></div>
 			<pre><samp id="example-report" for="example-dom"></samp></pre>
@@ -94,15 +95,16 @@
 			</p>
 			<h3>Open your JavaScript console</h3>
 			<p>
-				Do you code? Are you reading this on a desktop or laptop?
-				Pop open your browser’s JavaScript console
-				to begin exploring Q’s API right now.
-				Not sure how to open your browser’s JavaScript console?
-				Here’s a handy key-command chart:
+				Do you code? 
+				(Want to learn?)
+				If you’re on a desktop or laptop you can 
+				use the handy key-command chart below
+				to pop open your browser’s JavaScript console
+				and begin exploring Q from the inside.
 			</p>
 			<table id="console-open-commands"> 
 				<tr>
-					<td>&nbsp;</td>
+					<td class="no-highlight">&nbsp;</td>
 					<td>
 						<svg viewBox="0 0 600 600">
 							<path d="M447.372,316.885c0.759,81.719,71.689,108.913,72.475,109.26c-0.6,1.918-11.333,38.754-37.369,76.803
@@ -343,7 +345,7 @@ cat.<a href="ComplexNumber.html#.toText">toText</a>()   <span class="comment">//
 			</p>
 			<h3>Roadmap</h3>
 			<p>
-				As of December 2019
+				As of March 2020
 				we are focussed on refining the editor interface
 				and adding features to it.
 				The highest priority is including editor support for controlled gates.
@@ -369,7 +371,7 @@ cat.<a href="ComplexNumber.html#.toText">toText</a>()   <span class="comment">//
 					<strong>Keywords</strong>.
 					Q, Q.js, Qjs,
 					quantum, quantum physics, quantum mechanics, superposition,
-					quantum computer, quantum computer programming, quantum computing, QC, 
+					quantum computer, quantum computer programming, quantum JavaScript, quantum computing, QC, 
 					quantum simulator, quantum computer simulator, 
 					qubit, qbit, gate, Hadamard, Bloch, Bloch Sphere,
 					Web, Web site, website, Web browser, browser, HTML, HTML5, JavaScript, ES6, CSS.
