--- a/playground.html
+++ b/playground.html
@@ -58,16 +58,12 @@
 	</head>
 	<body>
 		<main>
-
-			<!-- 
-			<div class="color-swatch cos" id="color-swatch-1">1</div>
-			<div class="color-swatch cos" id="color-swatch-2">2</div>
-			<div class="color-swatch cos" id="color-swatch-3">3</div>
-			<div class="color-swatch cos" id="color-swatch-4">4</div>
-			<div class="color-swatch cos" id="color-swatch-5">5</div>
-		-->
-
-
+			
+			<!--<div class="color-swatch cos" id="color-swatch-1">1</div
+			><div class="color-swatch cos" id="color-swatch-2">2</div
+			><div class="color-swatch cos" id="color-swatch-3">3</div
+			><div class="color-swatch cos" id="color-swatch-4">4</div
+			><div class="color-swatch cos" id="color-swatch-5">5</div>-->
 
 			<h3>Playground</h3>
 			<p>
