--- a/Circuit.html
+++ b/Circuit.html
@@ -57,7 +57,12 @@
 		
 	</head>
 	<body>
-		<main>
+		<main class="api">
+			<p>
+				<a href="https://github.com/stewdio/q.js/blob/master/source/Q-Circuit.js?ts=4" target="_blank">
+					<code>Q-Circuit.js</code>
+				</a>
+			</p>
 			<h3 id="The_sounds_of_circuitry">The sounds of circuitry</h3>
 			<p>
 				Quantum circuits are represented by diagrams similar to
@@ -947,13 +952,6 @@ r5  |0⟩───○──┤ X ├────○────┤ M │
 					</dd>
 				</li>
 			</ul>
-			<hr>
-			<footer>
-				<p>
-					Source:
-					<a href="https://github.com/stewdio/q.js/blob/master/source/Q-Circuit.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q-Circuit.js</a>
-				</p>
-			</footer>
 		</main>
 		
 
