--- a/Gate.html
+++ b/Gate.html
@@ -57,7 +57,12 @@
 		
 	</head>
 	<body>
-		<main>
+		<main class="api">
+			<p>
+				<a href="https://github.com/stewdio/q.js/blob/master/source/Q-Gate.js?ts=4" target="_blank">
+					<code>Q-Gate.js</code>
+				</a>
+			</p>
 			<h3>Operations, not just matrices</h3>
 			<p>
 				Mathematically, a 
@@ -564,13 +569,6 @@ new <a href="Q.html">Q</a>.Gate({
 					</dd>
 				</li>
 			</ul>
-			<hr>
-			<footer>
-				<p>
-					Source:
-					<a href="https://github.com/stewdio/q.js/blob/master/source/Q-Gate.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q-Gate.js</a>
-				</p>
-			</footer>
 		</main>
 		<script>
 			
