--- a/Matrix.html
+++ b/Matrix.html
@@ -57,7 +57,12 @@
 		
 	</head>
 	<body>
-		<main>
+		<main class="api">
+			<p>
+				<a href="https://github.com/stewdio/q.js/blob/master/source/Q-Matrix.js?ts=4" target="_blank">
+					<code>Q-Matrix.js</code>
+				</a>
+			</p>
 			<h3>Grid of numbers</h3>
 			<p>
 				A <a href="https://en.wikipedia.org/wiki/Matrix_(mathematics)" target="_blank">matrix</a>
@@ -1116,13 +1121,6 @@ new <a href="Q.html">Q</a>.Matrix(
 					</dd>
 				</li>
 			</ul>
-			<hr>
-			<footer>
-				<p>
-					Source:
-					<a href="https://github.com/stewdio/q.js/blob/master/source/Q-Matrix.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q-Matrix.js</a>
-				</p>
-			</footer>
 		</main>
 		<script>
 
