--- a/Qubit.html
+++ b/Qubit.html
@@ -62,7 +62,12 @@
 			
 	</head>
 	<body>
-		<main>
+		<main class="api">
+			<p>
+				<a href="https://github.com/stewdio/q.js/blob/master/source/Q-Qubit.js?ts=4" target="_blank">
+					<code>Q-Qubit.js</code>
+				</a>
+			</p>
 			<h3>Perfect pairs</h3>
 			<p>
 				A <a href="https://en.wikipedia.org/wiki/Qubit" target="_blank">qubit</a>
@@ -1000,13 +1005,6 @@ var fox = new <a href="Q.html">Q</a>.Qubit( 1, 0 )
 					</dd>
 				</li>
 			</ul>
-			<hr>
-			<footer>
-				<p>
-					Source:
-					<a href="https://github.com/stewdio/q.js/blob/master/source/Q-Qubit.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q-Qubit.js</a>
-				</p>
-			</footer>
 		</main>
 		<script>
 
@@ -1126,21 +1124,21 @@ sphere.add( innards )
 const yAxis = new THREE.Mesh(
 
 	new THREE.BoxGeometry( 2.5, 0.01, 0.01 ),
-	new THREE.MeshBasicMaterial({ color: 0x33BB77 })
+	new THREE.MeshBasicMaterial({ color: 0x59A112 })
 )
 sphere.add( yAxis )
 
 const xAxis = new THREE.Mesh(
 
 	new THREE.BoxGeometry( 0.01, 0.01, 2.5 ),
-	new THREE.MeshBasicMaterial({ color: 0xFF4433 })
+	new THREE.MeshBasicMaterial({ color: 0xCF1717 })
 )
 sphere.add( xAxis )
 
 const zAxis = new THREE.Mesh(
 
 	new THREE.BoxGeometry( 0.01, 2.5, 0.01 ),
-	new THREE.MeshBasicMaterial({ color: 0x0366D6 })
+	new THREE.MeshBasicMaterial({ color: 0x0F66BD })
 )
 sphere.add( zAxis )
 
@@ -1158,7 +1156,7 @@ sphere.add( new THREE.ArrowHelper(
 	new THREE.Vector3( 0, 1.0, 0 ), 
 	new THREE.Vector3( 0, 1.25, 0 ), 
 	arrowLength, 
-	0x0366D6, 
+	0x0F66BD, 
 	arrowHeadLength, 
 	arrowHeadWidth
 ))
@@ -1167,7 +1165,7 @@ sphere.add( new THREE.ArrowHelper(
 	new THREE.Vector3( 1.0, 0, 0 ), 
 	new THREE.Vector3( 1.25, 0, 0 ), 
 	arrowLength, 
-	0x33BB77, 
+	0x59A112, 
 	arrowHeadLength, 
 	arrowHeadWidth
 ))
@@ -1176,7 +1174,7 @@ sphere.add( new THREE.ArrowHelper(
 	new THREE.Vector3( 0, 0, 1.0 ), 
 	new THREE.Vector3( 0, 0, 1.25 ),
 	arrowLength, 
-	0xFF4433, 
+	0xCF1717, 
 	arrowHeadLength, 
 	arrowHeadWidth
 ))
@@ -1220,7 +1218,7 @@ zAxis.add( zAxisLabel )
 const blochPointer = new THREE.Mesh(
 
 	new THREE.CylinderBufferGeometry( 0, 0.5, 1, 32, 1 ),
-	new THREE.MeshPhongMaterial({ color: 0xFFDD44 })
+	new THREE.MeshPhongMaterial({ color: 0xF2B90D })
 )
 blochPointer.geometry.translate( 0, -0.5, 0 )
 blochPointer.geometry.rotateX( Math.PI / 2 )
@@ -1234,7 +1232,7 @@ sphere.add( blochPointer )
 const blochVector = new THREE.Mesh(
 
 	new THREE.BoxGeometry( 0.04, 0.04, 1 ),
-	new THREE.MeshBasicMaterial({ color: 0xFFDD44 })
+	new THREE.MeshBasicMaterial({ color: 0xF2B90D })
 )
 blochVector.geometry.translate( 0, 0, 0.5 )
 sphere.add( blochVector )
