--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				It’s okay to make mistakes.
 				<span class="coming-soon">
 					Support for dragging multi-register gates 
-					(and more) coming in May 2020. 
+					(and more!) coming in May 2020. 
 					Stay tuned.
 				</span>
 			</p>
