Scrollbar ON on iOS?

--- a/-dev.html
+++ b/-dev.html
@@ -243,7 +243,7 @@ I-I-I---I-I</textarea>
 
 .Q-circuit::-webkit-scrollbar {
 
-	-webkit-appearance: none;
+	/*-webkit-appearance: none;*/
 	width:  2rem;
 	height: 2rem;
 }
