--- a/other/-dev-2.html
+++ b/other/-dev-2.html
@@ -36,24 +36,24 @@
 		<meta property="og:image"         content="https://stewdio.github.io/q.js/other/q-thumbnail.png">
 		<meta property="og:url"           content="https://stewdio.github.io/q.js/playground.html">
 		
-		<link rel="canonical" href="https://stewdio.github.io/q.js/playground.html">
-		<link href="other/q-favicon-064.png" rel="icon" type="image/png">
-		<link href="other/q-favicon-144.png" rel="apple-touch-icon">
+		<!-- <link rel="canonical" href="https://stewdio.github.io/q.js/playground.html"> -->
+		<link href="../other/q-favicon-064.png" rel="icon" type="image/png">
+		<link href="../other/q-favicon-144.png" rel="apple-touch-icon">
 		
-		<link rel="stylesheet" type="text/css" href="source/Q.css">
-		<link rel="stylesheet" type="text/css" href="source/Q-Circuit-Editor.css">
-		<link rel="stylesheet" type="text/css" href="other/documentation.css">
+		<link rel="stylesheet" type="text/css" href="../source/Q.css">
+		<link rel="stylesheet" type="text/css" href="../source/Q-Circuit-Editor-NEW.css">
+		<link rel="stylesheet" type="text/css" href="../other/documentation.css">
 
 		<script src="https://www.googletagmanager.com/gtag/js" async></script>
-		<script src="other/ga.js"></script>				
-		<script src="source/Q.js"></script>
-		<script src="source/Q-ComplexNumber.js"></script>
-		<script src="source/Q-Matrix.js"></script>
-		<script src="source/Q-Qubit.js"></script>
-		<script src="source/Q-Gate.js"></script>
-		<script src="source/Q-Circuit.js"></script>
-		<script src="source/Q-Circuit-Editor.js"></script>
-		<script src="other/navigation.js"></script>
+		<script src="../other/ga.js"></script>				
+		<script src="../source/Q.js"></script>
+		<script src="../source/Q-ComplexNumber.js"></script>
+		<script src="../source/Q-Matrix.js"></script>
+		<script src="../source/Q-Qubit.js"></script>
+		<script src="../source/Q-Gate.js"></script>
+		<script src="../source/Q-Circuit.js"></script>
+		<script src="../source/Q-Circuit-Editor.js"></script>
+		<script src="../other/navigation.js"></script>
 		
 	</head>
 	<body>
@@ -85,286 +85,76 @@ I-I-I---I-I</textarea>
 				<br><br>
 			</p>
 			
-<style>
-
-/*
-
-
-https://css-tricks.com/idea-simple-responsive-spreadsheet/
-
-
-
-*/
-
-.Q-circuit {
-
-	position: relative;
-	width:  100%;
-	height: 16rem;
-	/*min-height: 16rem;*/
-	overflow: auto;
-	background-color: white;
-	border-radius: 1rem;
-	box-shadow: 
-		 0.2rem  0.2rem 0.2rem rgba( 0, 0, 0, 0.15 ) inset,
-		-0.2rem -0.2rem 0.2rem rgba( 255, 255, 255, 1 ) inset;
-	background: linear-gradient( 
-
-		0.375turn,
-		rgba( 255, 255, 255, 1.0 ),
-		rgba( 255, 255, 255, 0.2 )
-	) !important;
-}
-.Q-circuit.Q-circuit-locked .Q-circuit-board-operation {
-
-	cursor: not-allowed;
-}
-.Q-circuit-board {
-
-	position: relative;
-	width:  200%;
-	height: 200%;
-	
-}
-.Q-circuit-board-foreground,
-.Q-circuit-board-background {
-
-	box-sizing: border-box;
-	position: absolute;
-	display: grid;	
-	grid-auto-rows:    4rem;
-	grid-auto-columns: 4rem;
-	top:  0;
-	left: 0;
-	width:  100%;
-	height: 100%;
-}
-.Q-circuit-board-background {
-
-	color: rgba( 0, 0, 0, 0.2 );
-}
-
-
-.Q-circuit-cell {
-
-	margin: 0.5rem;
-	padding: 0.5rem;
-	text-align: center;
-	overflow: hidden;
-	line-height: 1.95rem;
-	font-style: italic;
-}
-.Q-circuit-cell:hover {
-
-	/*background-color: white;*/
-}
-.Q-circuit-moment-index,
-.Q-circuit-register-index {
-	
-	position: sticky;
-	z-index: 2;
-	color: hsl(
-
-		var( --Q-color-base-hue ),
-		10%,
-		80%
-	);
-	font-family: var( --Q-font-family-mono );
-}
-.Q-circuit-moment-index {
-
-	top: 0px;
-	border-top-right-radius: 100%;
-	border-top-left-radius:  100%;
-	grid-row: 1;
-}
-.Q-circuit-register-index {
-
-	left: 0px;
-	border-top-left-radius:    100%;
-	border-bottom-left-radius: 100%;
-	grid-column: 1;
-}
-.Q-circuit-input {
-
-	grid-column: 2;
-	font-size: 1.5rem;
-	font-weight: 900;
-	font-family: var( --Q-font-family-mono );
-
-}
-.Q-circuit-operation {
-	
-	--Q-operation-color-hue: var( --Q-color-yellow-hue );
-	--Q-operation-color-main: var( --Q-color-yellow );
-	--Q-operation-color-light: hsl(
-
-		var( --Q-operation-color-hue ),
-		90%,
-		70%
-	);
-	--Q-operation-color-dark: hsl(
-
-		var( --Q-operation-color-hue ),
-		50%,
-		60%
-	);
-
-	box-shadow:
-		 0.1rem  0.1rem 0.1rem rgba( 0, 0, 0, 0.2 );
-
-	border-radius: 0.2rem;
-	/*
-	border-top:    0.1rem solid var( --Q-operation-color-light );
-	border-left:   0.1rem solid var( --Q-operation-color-light );
-	border-right:  0.1rem solid var( --Q-operation-color-dark );
-	border-bottom: 0.1rem solid var( --Q-operation-color-dark );
-	*/
-	background: 
-		var( --Q-operation-color-main )
-		/*linear-gradient(
-
-			0.45turn,
-			rgba( 255, 255, 255, 0.1 ),
-			rgba( 0, 0, 0, 0.05 )
-		)*/;
-	color: white;
-	text-shadow: -0.05rem -0.05rem 0 rgba( 0, 0, 0, 0.1 );
-	font-size: 1.5rem;
-	font-weight: 900;
-	cursor: move;
-}
-.Q-circuit-operation-hadamard {
-
-	--Q-operation-color-hue:  var( --Q-color-red-hue );
-	--Q-operation-color-main: var( --Q-color-red );
-}
-.Q-circuit-operation-control,
-.Q-circuit-operation-target {
-
-	--Q-operation-color-hue:  var( --Q-color-orange-hue );
-	--Q-operation-color-main: var( --Q-color-orange );
-	border-radius: 100%;
-}
-.Q-circuit-operation-control {
-
-	margin: 1.5rem;
-	width:  1rem;
-	height: 1rem;
-}
-
-
-.Q-circuit::-webkit-scrollbar {
-
-	/*-webkit-appearance: none;*/
-	width:  2rem;
-	height: 2rem;
-}
-.Q-circuit::-webkit-scrollbar-track {
-
-	/*border-radius: 1rem;*/
-	background-color: hsl(
-
-		var( --Q-color-base-hue ), 
-		10%,
-		80%
-	);
-
-	background-color: hsla(
-
-		var( --Q-color-base-hue ),
-		10%,
-		80%,
-		0.5
-	);
-
-	background-color: transparent;
-
-/*	background: linear-gradient( 
-
-		0.375turn,
-		rgba( 255, 255, 255, 1.0 ),
-		rgba( 255, 255, 255, 0.2 )
-	) !important;*/
-
-}
-.Q-circuit::-webkit-scrollbar-thumb {
-
-	border-radius: 1rem;	
-	background: 
-		linear-gradient( 
-
-			0.5turn,
-			hsl(
-
-				var( --Q-color-base-hue ), 
-				 3%,
-				85%
-			) 0%,
-			hsl(
-
-				var( --Q-color-base-hue ), 
-				 3%,
-				80%
-			) 10%,
-			hsl(
-
-				var( --Q-color-base-hue ), 
-				 3%,
-				80%
-			) 90%,
-			hsl(
-
-				var( --Q-color-base-hue ), 
-				 3%,
-				70%
-			) 100%
-		);
-
-	cursor: move;
-}
-.Q-circuit::-webkit-scrollbar-thumb:hover {
-
-	background-color: hsl(
-
-		var( --Q-color-base-hue ), 
-		50%,
-		50%
-	);
-}
 
 
 
 
 
-</style>
-<div class="Q-circuit-palette">Palette</div>
+
+
+<div class="Q-circuit-palette">
+	<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-hadamard">H</div>
+	<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-pauli-x">X</div>
+	<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-pauli-y">Y</div>
+	<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-pauli-z">Z</div>
+	<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-phase">S</div>
+</div>
 <br>
-🔒 / 🔓 &larr; &rarr;
 <div class="Q-circuit" id="my-sample-circuit">
-	<div class="Q-circuit-board">
+	<div class="Q-circuit-board-container">
+		<div class="Q-circuit-board">
 
-		<div class="Q-circuit-board-background">
-			<!-- 
-			wires<br>
-			vertical grid lines (intersect on ops)<br>
-			background colors? -->
+			<div class="Q-circuit-board-background">
+				<!-- 
+				wires<br>
+				vertical grid lines (intersect on ops)<br>
+				background colors? -->
+			</div>
+			<div class="Q-circuit-board-foreground">
+				
+				<div class="Q-circuit-cell Q-circuit-header Q-circuit-selectall">&searr;</div>
+				<div class="Q-circuit-cell Q-circuit-header Q-circuit-input-header"></div>
+				<div class="Q-circuit-cell Q-circuit-header Q-circuit-moment-index" style="grid-column: 3" title="Moment 1">1</div>
+				<div class="Q-circuit-cell Q-circuit-header Q-circuit-moment-index" style="grid-column: 4" title="Moment 2">2</div>
+				<div class="Q-circuit-cell Q-circuit-header Q-circuit-moment-index" style="grid-column: 5" title="Moment 3">3</div>
+				<div class="Q-circuit-cell Q-circuit-header Q-circuit-moment-index" style="grid-column: 6" title="Moment 4">4</div>
+				<div class="Q-circuit-cell Q-circuit-header Q-circuit-moment-index-add" style="grid-column: 7">+</div>
+				
+				<div class="Q-circuit-cell Q-circuit-header Q-circuit-register-index" style="grid-row: 2" title="Register 1">1</div>
+				<div class="Q-circuit-cell Q-circuit-input" style="grid-row: 2">0</div>
+				<div class="Q-circuit-cell Q-circuit-header Q-circuit-register-index" style="grid-row: 3" title="Register 2">2</div>
+				<div class="Q-circuit-cell Q-circuit-input" style="grid-row: 3">0</div>
+
+<div class="Q-circuit-cell Q-circuit-header Q-circuit-register-index" style="grid-row: 4" title="Register 3">3</div>
+				<div class="Q-circuit-cell Q-circuit-input" style="grid-row: 4">0</div>
+				<div class="Q-circuit-cell Q-circuit-header Q-circuit-register-index-add" style="grid-row: 5">+</div>
+
+
+				<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-hadamard" style="grid-column: 3; grid-row: 2">H</div>
+				<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-control" style="grid-column: 4; grid-row: 2">.</div>
+				<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-target" style="grid-column: 4; grid-row: 3">X</div>
+				<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-pauli-x" style="grid-column: 5; grid-row: 2">X</div>
+				<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-pauli-x" style="grid-column: 5; grid-row: 3">X</div>
+				<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-phase" style="grid-column: 6; grid-row: 4">S</div>
+			</div>
 		</div>
-		<div class="Q-circuit-board-foreground">
-			<div class="Q-circuit-cell Q-circuit-moment-index" style="grid-column: 3">m1</div>
-			<div class="Q-circuit-cell Q-circuit-moment-index" style="grid-column: 4">m2</div>
-			<div class="Q-circuit-cell Q-circuit-moment-index" style="grid-column: 5">m3</div>
-			<div class="Q-circuit-cell Q-circuit-register-index" style="grid-row: 2">r1</div>
-			<div class="Q-circuit-cell Q-circuit-input" style="grid-row: 2">0</div>
-			<div class="Q-circuit-cell Q-circuit-register-index" style="grid-row: 3">r2</div>
-			<div class="Q-circuit-cell Q-circuit-input" style="grid-row: 3">0</div>
-			<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-hadamard" style="grid-column: 3; grid-row: 2">H</div>
-			<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-control" style="grid-column: 4; grid-row: 2">.</div>
-			<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-target" style="grid-column: 4; grid-row: 3">X</div>
-			<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-pauli-x" style="grid-column: 5; grid-row: 2">X</div>
-			<div class="Q-circuit-cell Q-circuit-operation Q-circuit-operation-pauli-x" style="grid-column: 5; grid-row: 3">X</div>
+	</div>
+	<div class="Q-circuit-toolbar">
+		<div class="Q-circuit-button" title="Lock / unlock">
+			🔒
+		</div
+		><div class="Q-circuit-button" title="Undo">
+			&larr;
+		</div
+		><div class="Q-circuit-button" title="Redo">
+			&rarr;
+		</div
+		><div class="Q-circuit-button" title="Add moment">
+			+m
+		</div
+		><div class="Q-circuit-button" title="Add register">
+			+r
 		</div>
-	
 	</div>
 </div>
 <script>
@@ -377,11 +167,23 @@ document
 .addEventListener( 'mousedown', function( event ){
 
 
-	const parent = event.target.closest( '.Q-circuit' )
-	console.log( parent.scrollLeft )
+	const circuit = event.target.closest( '.Q-circuit' )
+	console.log( 'circuit', circuit )
+	console.log( 'circuit scrollLeft', circuit.scrollLeft )
+	console.log( 'circuit scrollTop', circuit.scrollTop )
+
+	const operation = event.target.closest( '.Q-circuit-operation' )
+	if( operation ){
+	
+		console.log( 'operation', operation )
+		// const computed = window.getComputedStyle( operation )		
+		// console.log( 'computed', computed )		
+		console.log( 'operation register index', +operation.style.gridRowStart - 1 )
+		console.log( 'operation moment index', +operation.style.gridColumnStart - 2 )
+	}
+
 
 	// console.log( event ) 
-
 
 	// console.log( 'target', event.target.scrollLeft  )
 	// console.log( 'parent', event.target.parentNode.scrollLeft  )
